--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 URI = 'mongodb+srv://alan:AlanDiko1984@cluster0.v2sti72.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET='supercodecanbehere'
 PORT=3001
